@@ -58,26 +58,32 @@ Less than 10 methods, with getter/setter...
         <expected-problems>0</expected-problems>
         <code>
         	<![CDATA[
-public class Foo 
-{
-	 public void setMethod1(){}
-	 public void setMethod2(){}
-	 public void setMethod3(){}
-	 public void setMethod4(){}
-	 public void setMethod5(){}
-	 
-	 public void getMethod6(){}
-	 public void getMethod7(){}
-	 public void getMethod8(){}
-	 public void getMethod9(){}
-	 public void getMethod10(){}
-	 
-	 public void method11(){}
-	 public void method12(){}
-	 public void method13(){}
-	 public void method14(){}
-	 public void method15(){}
-	 public void method16(){}
+public class Foo {
+     public void setMethod1(){}
+     public void setMethod2(){}
+     public void setMethod3(){}
+     public void setMethod4(){}
+     public void setMethod5(){}
+
+     public void getMethod6(){}
+     public void getMethod7(){}
+     public void getMethod8(){}
+     public void getMethod9(){}
+     public void getMethod10(){}
+
+     public boolean isMethod11(){}
+     public boolean isMethod12(){}
+     public boolean isMethod13(){}
+     public boolean isMethod14(){}
+     public boolean isMethod15(){}
+     public boolean isMethod16(){}
+
+     public void method17(){}
+     public void method18(){}
+     public void method19(){}
+     public void method20(){}
+     public void method21(){}
+     public void method22(){}
 }
      	]]>
 		</code>
