@@ -338,8 +338,8 @@ public class Foo extends Bar {
         externalInfoUrl="http://pmd.sourceforge.net/rules/codesize.html#TooManyMethods">
         <description>
             <![CDATA[
-A class with too many methods is probably a good suspect for refactoring, in order to reduce its complexity and find a way to
-have more fine grained objects.
+A class with too many methods is probably a good target for refactoring, in
+order to reduce its complexity and find a way to have more fine grained objects.
             ]]>
         </description>
         <priority>3</priority>
@@ -350,28 +350,34 @@ have more fine grained objects.
                     <!--  FIXME: Refine XPath to discard 'get' and 'set' methods with Block no more than 3 lines,
                                 something like this:
                                     not (
-                                    (
-                                    starts-with(@Image,'get')
-                                        or
-                                    starts-with(@Image,'set')
-                                    )
-                                    and ( (
-                                        (../Block/attribute::endLine)
-                                         -
-                                        (../Block/attribute::beginLine) ) <= 3 )
-                                    )
+                                            (
+                                                starts-with(@Image,'get')
+                                                or
+                                                starts-with(@Image,'set')
+                                                or
+                                                starts-with(@Image,'is')
+                                            )
+                                            and (
+                                                    (
+                                                        (../Block/attribute::endLine)
+                                                         -
+                                                        (../Block/attribute::beginLine)
+                                                    ) <= 3
+                                            )
+                                        )
                                 This will avoid discarding 'real' method...
                      -->
                     <![CDATA[
                      //ClassOrInterfaceDeclaration/ClassOrInterfaceBody
                     [
                         count(descendant::MethodDeclarator[
-                            not
-                            (
+                        not (
                             starts-with(@Image,'get')
-                                or
+                            or
                             starts-with(@Image,'set')
-                            )
+                            or
+                            starts-with(@Image,'is')
+                        )
                         ]) > $maxmethods
                     ]
                     ]]>
@@ -379,9 +385,4 @@ have more fine grained objects.
             </property>
         </properties>
     </rule>
-
-
 </ruleset>
-
-
-
