@@ -4,6 +4,7 @@ Add options --ignore-literals and --ignore-identifiers to the CPD command line t
 Fixed character reference in xml report - thanks to Seko
 Add C# support for CPD - thanks to Florian Bauer
 Fix small bug in Rule Designer UI
+Improve TooManyMethods rule - thanks to a patch from Riku Nykanen
 
 New Rule:
 	basic: DontCallThreadRun - thanks to Andy Throgmorton
